<resources>
    <string name="app_name">Patra</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_project">Project</string>
    <string name="menu_marketing">Marketing</string>
    <string name="menu_site_supervisor">Site Supervisor</string>
    <string name="menu_depot">Depot</string>
    <string name="menu_produk">Produk</string>
    <string name="menu_rekanan">Rekanan</string>
    <string name="menu_tarif">Tarif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
