<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_marketing"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_marketing" />
        <item
            android:id="@+id/nav_site_supervisor"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_site_supervisor" />
        <item
            android:id="@+id/nav_depot"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_depot" />

        <item
            android:id="@+id/nav_produk"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_produk" />
        <item
            android:id="@+id/nav_rekanan"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_rekanan" />

        <item
            android:id="@+id/nav_tarif"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_tarif" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_acccount"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_account" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
